[package]
name = "kithmonite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.22"
anyhow = "1.0"
csv = "1.1"
thiserror = "1.0"
itertools = "0.10"

[dev-dependencies]
rust_decimal_macros = "1.22"

[workspace]
members = [
    "generator",
]